; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_task_tracker_protocol.c_CreateTask.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_task_tracker_protocol.c_CreateTask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i64, i32, i32, i32, i64 }

@JOB_CLEANUP_TASK_ID = common dso_local global i64 0, align 8
@HIGH_PRIORITY_TASK_TIME = common dso_local global i64 0, align 8
@MaxTaskStringSize = common dso_local global i32 0, align 4
@TASK_ASSIGNED = common dso_local global i32 0, align 4
@INVALID_CONNECTION_ID = common dso_local global i32 0, align 4
@NAMEDATALEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i64, i8*)* @CreateTask to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CreateTask(i32 %0, i64 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.TYPE_3__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %7, align 8
  store i64 0, i64* %8, align 8
  %11 = call i8* (...) @CurrentDatabaseName()
  store i8* %11, i8** %9, align 8
  %12 = call i8* (...) @CurrentUserName()
  store i8* %12, i8** %10, align 8
  %13 = call i64 @time(i32* null)
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* @JOB_CLEANUP_TASK_ID, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %3
  %18 = load i64, i64* @HIGH_PRIORITY_TASK_TIME, align 8
  store i64 %18, i64* %8, align 8
  br label %19

19:                                               ; preds = %17, %3
  %20 = load i32, i32* %4, align 4
  %21 = load i64, i64* %5, align 8
  %22 = call %struct.TYPE_3__* @WorkerTasksHashEnter(i32 %20, i64 %21)
  store %struct.TYPE_3__* %22, %struct.TYPE_3__** %7, align 8
  %23 = load i64, i64* %8, align 8
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 6
  store i64 %23, i64* %25, align 8
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %27 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %26, i32 0, i32 5
  %28 = load i32, i32* %27, align 8
  %29 = load i8*, i8** %6, align 8
  %30 = load i32, i32* @MaxTaskStringSize, align 4
  %31 = call i32 @strlcpy(i32 %28, i8* %29, i32 %30)
  %32 = load i32, i32* @TASK_ASSIGNED, align 4
  %33 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %33, i32 0, i32 4
  store i32 %32, i32* %34, align 4
  %35 = load i32, i32* @INVALID_CONNECTION_ID, align 4
  %36 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 3
  store i32 %35, i32* %37, align 8
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 2
  store i64 0, i64* %39, align 8
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = load i8*, i8** %9, align 8
  %44 = load i32, i32* @NAMEDATALEN, align 4
  %45 = call i32 @strlcpy(i32 %42, i8* %43, i32 %44)
  %46 = load %struct.TYPE_3__*, %struct.TYPE_3__** %7, align 8
  %47 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 8
  %49 = load i8*, i8** %10, align 8
  %50 = load i32, i32* @NAMEDATALEN, align 4
  %51 = call i32 @strlcpy(i32 %48, i8* %49, i32 %50)
  ret void
}

declare dso_local i8* @CurrentDatabaseName(...) #1

declare dso_local i8* @CurrentUserName(...) #1

declare dso_local i64 @time(i32*) #1

declare dso_local %struct.TYPE_3__* @WorkerTasksHashEnter(i32, i64) #1

declare dso_local i32 @strlcpy(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
